# vcxsrv

./: .gitignore  README.md  buildall.bat  buildall.sh  building.txt  compare.bat  fastforwardotherbranch.sh  filesthatshouldbethesame.bat  filesthatshouldbethesame.py  makefile.after  makefile.before  packages.txt  python.bat  runtime.debug.manifest  setvcenv.sh  sync.bat  synchronise.py  updategit.bat  updategit.sh  versionchanges.btm
X11/: COPYING  ChangeLog  Composite.h  CompositeP.h  ConstrainP.h  ConvertI.h  Core.h  CoreP.h  CreateI.h  HookObjI.h  InitialI.h  Intrinsic.h  IntrinsicP.h  Makefile.am  Makefile.in  Object.h  README  ResConfigP.h  SelectionI.h  Shell.h  ShellP.h  StringDefs.h  Sunkeysym.h  ThreadsI.h  Vendor.h  XF86keysym.h  Xcms.h  Xdmcp.h  Xfuncproto.h  Xfuncproto.h.in  Xfuncs.h  Xlib-xcb.h  Xlib.h  XlibConf.h  Xlibint.h  Xos.h  Xpoll.h  Xpoll.h.in  Xproto.h  Xregion.h  (+11 more)
X11/Xaw/: AllWidgets.h  AsciiSrc.h  AsciiText.h  AsciiTextP.h  Box.h  BoxP.h  Command.h  CommandP.h  Dialog.h  DialogP.h  Form.h  Grip.h  Label.h  LabelP.h  List.h  MultiSink.h  MultiSinkP.h  MultiSrc.h  Paned.h  PanedP.h  Panner.h  Porthole.h  PortholeP.h  RepeaterP.h  Scrollbar.h  ScrollbarP.h  SimpleMenP.h  SimpleMenu.h  SimpleP.h  SmeBSB.h  SmeBSBP.h  SmeP.h  StripCharP.h  StripChart.h  TemplateP.h  TextP.h  TextSink.h  TextSinkP.h  TextSrcP.h  TreeP.h  (+3 more)
X11/Xmu/: Atoms.h  CharSet.h  CloseHook.h  Converters.h  CurUtil.h  CvtCache.h  DisplayQue.h  Drawing.h  Editres.h  EditresP.h  Error.h  ExtAgent.h  Initer.h  Misc.h  StdCmap.h  StdSel.h  SysUtil.h  WinUtil.h  Xmu.h
X11/extensions/: .gitignore  COPYING  ChangeLog  EVI.h  EVIproto.h  INSTALL  Makefile.am  Makefile.in  NEWS  README  XI.h  XI2.h  XI2proto.h  XI2proto.txt  XIproto.h  XIproto.txt  XKBrules.h  XLbx.h  XShm.h  Xcup.h  Xext.h  Xge.h  aclocal.m4  ag.h  agproto.h  bigreqsproto.pc.in  bigreqstr.h  compositeproto.h  compositeproto.pc.in  configure  configure.ac  cup.h  cupproto.h  damageproto.pc.in  dbe.h  dbeproto.h  dpms.h  dpmsconst.h  dpmsproto.h  evieproto.pc.in  (+52 more)
X11/fonts/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  bdfint.h  configure  configure.ac  fntfil.h  fontmisc.h  fontsproto.pc.in
X11/xtrans/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  Xtrans.c  Xtrans.h  Xtrans.mm  Xtransint.h  Xtranslcl.c  Xtranssock.c  Xtranstli.c  Xtransutil.c  aclocal.m4  configure  configure.ac  docbook.am  (+3 more)
bdftopcf/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  bdftopcf.c  bdftopcf.man  config.h  config.h.in  configure  configure.ac  makefile
fontconfig/: .gitignore  COPYING  INSTALL  Makefile.am  README  autogen.sh  config-fixups.h  config.h  configure.ac  configure.in  fontconfig.pc.in  fonts.conf.in  fonts.dtd  new-version.sh
gl/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  gl_mangle.h  glext.h  glproto.pc.in  glxext.h  glxproto.h  glxtokens.h
libX11/: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  configure  configure.ac  cpprules.in  cpprules.mak  docbook-gen-chunk.am  docbook-gen.am  docbook.am  libX11.def  makefile  x11-xcb.pc.in  x11.pc.in
libXau/: .gitignore  AUTHORS  AuDispose.c  AuFileName.c  AuGetAddr.c  AuGetBest.c  AuLock.c  AuRead.c  AuUnlock.c  AuWrite.c  Autest.c  ChangeLog  Makefile.am  Makefile.in  README  Xau.man  aclocal.m4  config.h  config.h.in  configure  configure.ac  libXau.def  makefile  xau.pc.in
libXaw/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  configure  configure.ac  xaw6.pc.in  xaw7.pc.in
libXdmcp/: .gitignore  A8Eq.c  AUTHORS  Alloc.c  Array.c  CA8.c  ChangeLog  DA32.c  DA8.c  DAofA8.c  Fill.c  Flush.c  GenKey.c  Key.c  Makefile.am  Makefile.in  RA16.c  RA32.c  RA8.c  RAofA8.c  RC16.c  RC32.c  RC8.c  README  RHead.c  RR.c  Read.c  Unwrap.c  WA16.c  WA32.c  WA8.c  WAofA8.c  Wrap.c  Wrap.h  Wraphelp.README.crypto  Wraphelp.c  Write.c  aclocal.m4  config.h  config.h.in  (+4 more)
libXext/: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  docbook.am  xext.pc.in
libXfixes/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  xfixes.pc.in
libXfont/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  configure  configure.ac  devbook.am  xfont.pc.in
libXft/: .gitignore  AUTHORS  Makefile.am  NEWS  README  configure.ac  xft.pc.in
libXinerama/: .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  xinerama.pc.in
libXmu/: .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  docbook.am  xmu.pc.in  xmuu.pc.in
libXpm/: AUTHORS  COPYING  COPYRIGHT  ChangeLog  FAQ.html  Makefile.am  Makefile.in  README  README.AMIGA  aclocal.m4  config.h.in  configure  configure.ac  xpm.pc.in
libXrender/: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  xrender.pc.in
libXt/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h  config.h.in  configure  configure.ac  xt.pc.in
libfontenc/: .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  fontenc.pc.in
libxcb/: .gitignore  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  check-pc-requires  configure  configure.ac  xcb-composite.pc.in  xcb-damage.pc.in  xcb-dpms.pc.in  xcb-dri2.pc.in  xcb-dri3.pc.in  xcb-glx.pc.in  xcb-present.pc.in  xcb-randr.pc.in  xcb-record.pc.in  xcb-render.pc.in  xcb-res.pc.in  xcb-screensaver.pc.in  xcb-shape.pc.in  xcb-shm.pc.in  xcb-sync.pc.in  xcb-xevie.pc.in  xcb-xf86dri.pc.in  xcb-xfixes.pc.in  xcb-xinerama.pc.in  xcb-xinput.pc.in  xcb-xkb.pc.in  xcb-xlib.pc.in  xcb-xprint.pc.in  xcb-xselinux.pc.in  xcb-xtest.pc.in  xcb-xv.pc.in  xcb-xvmc.pc.in  xcb.pc.in
(+10360 files in other folders)
